sock_shop/manifests/overlays/fyre/03-carts-db-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carts-db
  labels:
    name: carts-db
  namespace: sock-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      name: carts-db
  template:
    metadata:
      labels:
        name: carts-db
    spec:
      containers:
        - name: carts-db
          image: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - name: mongo
              containerPort: 27017
          securityContext:
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /tmp
              name: carts-db-temp-vol
            - mountPath: /data/db
              name: carts-db-vol
      volumes:
        #        - name: carts-db-temp-vol
        #  persistentVolumeClaim:
        #    claimName: carts-db-temp-pvc
        - name: carts-db-vol
          emptyDir:
            medium: Memory
      nodeSelector:
        node.openshift.io/os_id: rhcos
