sock_shop/manifests/overlays/fyre/19-rabbitmq-dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  labels:
    name: rabbitmq
  namespace: sock-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      name: rabbitmq
  template:
    metadata:
      labels:
        name: rabbitmq
      annotations:
        prometheus.io/scrape: "false"
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.6.8-management
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 15672
              name: management
            - containerPort: 5672
              name: rabbitmq
          securityContext:
            readOnlyRootFilesystem: false
        - name: rabbitmq-exporter
          # rabbitmq-exporter	1.0.0-RC19	podman pull icr.io/ppc64le-oss/rabbitmq-exporter-ppc64le:1.0.0-RC19
          image: kbudde/rabbitmq-exporter
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9090
              name: exporter
      nodeSelector:
        node.openshift.io/os_id: rhcos
